# wslpm

./: .gitignore  CMakeLists.txt  README.md  RELEASE_NOTES.md  build.bat
.github/workflows/: release.yml
res/: app.manifest  app.rc
src/: app.cpp  app.h  main.cpp  operations.cpp  operations.h  resource.h  theme.h  wsl_bridge.cpp  wsl_bridge.h
